resources/scss/components/_navbar.scss
@keyframes spin-shape {
  100% {transform:rotate(360deg);}
}

nav {
	display: none;
	// position: absolute;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;	
	z-index: 1;

	.navbar-container {
		position: relative;
		display: flex;
		@extend .px-5;
		@extend .py-2;
		
		.navbar-brand {
			cursor: auto;
			svg, img {
				height: 48px;
				width: auto;
			}
		}

		.navbar-slide {
			flex: 1;
			display: none;
		}
	}

	.navbar-container.active  {
		-webkit-box-shadow: 0px 2px 15px 1px rgba(0,0,0,0.6);
		-moz-box-shadow: 0px 2px 15px 1px rgba(0,0,0,0.6);
		box-shadow: 0px 2px 15px 1px rgba(0,0,0,0.6);

		background-color: #eeeef0;
	}
}

nav {
	.navbar-header {
		display: flex;
		justify-content: space-between;
		align-items: center;
		flex-wrap: wrap;
		> * {
			vertical-align: middle;
		}
		.navbar-brand {
			cursor: pointer;
		}
	}
}

nav {
		.navbar-menu {
			ul {
				padding: 0;
				margin: 0; 
				li {
					display: inline-block;
					list-style: none;
					@extend .p-2;
					a {
						text-decoration: none;
						color: $color-dark;
						padding-bottom: 0.25em;
						padding-right: 0.25em;
						
						svg {
							height: 1.5rem;
							width: auto;
						}
						> * {
							font-family: 'Gotham-Light', 'Gotham-Black', 'Brandon', sans-serif;
							text-transform: uppercase;
							vertical-align: middle;
						}

					
						&.active {
						  // background: #fff;
						  // border: none;
						  // box-shadow:
						  //       0 0 0 1.25px fade-out($color-border, 0.25),
						  //       0 0 0 3px #ffffff;
						  cursor: pointer;
						  width: auto;
						  width: fit-content;
						  svg {
						  	fill: $color-primary;
						  }
						  span {
						  	color: $color-primary
						  }
						}

						&:not(.active) {
							&:hover {
								color: $color-secondary;
								transition: 1.5s;

								svg {
									fill: $color-secondary;
									// animation: spin-shape 1.5s;
									// transition: fill 1.5s;
									
								}
							}
	
						}

					}
				}
			}
		}
}

nav {
	.navbar-media {
		ul {
			display: flex;
			justify-content: space-between;
			margin: 0;
			padding: 0;

			li {
				display: inline-block;
				list-style: none;
				flex: 1;
				padding: 0 .25rem;
			}

			@media only screen and (max-width: 768px) {
				li {
					display: block;
				}
			}
		}
		img {
			height: 2.5rem;
			width: auto;
		}
	}
}

@media (max-width: 991px) {
	nav{
		.navbar-header {
			justify-content: space-around;
		}	
	}
}

@media (max-width: 768px), (orientation: portrait) {
	nav {
		.navbar-container {
			.navbar-slide {
				// opacity: 0;
				// transition: opacity 1s ease-in-out;
				// transition-delay: 0s;
			}
		}
	}
}

@media (max-width: 754px) {
	nav{
		.navbar-container {
			flex-wrap: wrap;
			> a {
				// margin: auto;
			}
			> .navbar-slide {
				flex-basis: 100%;
				text-align: center;
			}

			.navbar-header {
				> * {
					&:first-child{
						flex-basis: 100%;
						text-align: center;
					}
				}
			}

		}	
	}
}

